--- a/Bookshelf/Views/Timeline.xaml
+++ b/Bookshelf/Views/Timeline.xaml
@@ -7,10 +7,10 @@
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     Title="Timeline"
     Style="{StaticResource ContentPage}">
-    <VerticalStackLayout>
+    <StackLayout VerticalOptions="FillAndExpand">
         <Label
+            FontSize="18"
             HorizontalOptions="Center"
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" />
-    </VerticalStackLayout>
+            Text="Welcome to .NET Multi-platform App UI teste de qualquer coisa escrita p ficar por baixo do expander" />
+    </StackLayout>
 </ContentPage>
