--- a/Bookshelf/Views/BookList.xaml
+++ b/Bookshelf/Views/BookList.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:behaviors="clr-namespace:Bookshelf.Utils.Behaviors"
     xmlns:components="clr-namespace:Bookshelf.Components"
-    xmlns:model="clr-namespace:BookshelfModels.Books;assembly=BookshelfModels"
+    xmlns:model="clr-namespace:Models.Books;assembly=Models"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:vm="clr-namespace:Bookshelf.ViewModels"
     Title="{Binding PageTitle}"
