atualização do nuget de usermanagement; Ajuste no tamanho do icone;

--- a/Bookshelf/Views/Book/BookDetail.xaml
+++ b/Bookshelf/Views/Book/BookDetail.xaml
@@ -329,7 +329,7 @@
                         <Button.ImageSource>
                             <FontImageSource
                                 FontFamily="FontAwesome"
-                                Glyph="{x:Static Icons:IconFont.Pen}"
+                                Glyph="{x:Static Icons:IconFont.Edit}"
                                 Size="15"
                                 Color="#EDEDED" />
                         </Button.ImageSource>
